--- a/gaiastack/Vagrantfile
+++ b/gaiastack/Vagrantfile
@@ -1,25 +1,49 @@
 Vagrant.configure("2") do |config|
-  (1..5).each do |i|
+  ## master nodes
+  (1..1).each do |i|
     config.vm.define "gaia#{i}" do |node|
       # base box
       node.vm.box = "centos/7"
       node.vm.box_version = "1706.01"
 
+      # hostname
+      node.vm.hostname = "gaia#{i}"
+
       # provider
-      node.vm.provider "virtualbox" do |v|
+      node.vm.provider "libvirt" do |v|
         v.cpus = 4
         v.memory = 3072
-        v.name = "gaia#{i}"
       end
+
+      # networks
+      node.vm.network :private_network,
+        :ip => "192.168.56.#{i+10}",
+        :mac => "fa:16:3e:56:ab:c2"
+
+      # Enable provisioning with a shell script.
+      node.vm.provision "shell", inline: "sudo /vagrant/bootstrap.sh"
+    end
+  end
+
+  # other nodes
+  (2..5).each do |i|
+    config.vm.define "gaia#{i}" do |node|
+      # base box
+      node.vm.box = "centos/7"
+      node.vm.box_version = "1706.01"
 
       # hostname
       node.vm.hostname = "gaia#{i}"
 
-      # networks
-      node.vm.network "private_network", ip: "192.168.56.#{i+10}"
+      # provider
+      node.vm.provider "libvirt" do |v|
+        v.cpus = 4
+        v.memory = 3072
+      end
 
-      # shared directory
-      #node.vm.synced_folder "./share", "/home/vagrant/share"
+      # networks
+      node.vm.network :private_network,
+        :ip => "192.168.56.#{i+10}"
 
       # Enable provisioning with a shell script.
       node.vm.provision "shell", inline: "sudo /vagrant/bootstrap.sh"
