--- a/ceph/Vagrantfile
+++ b/ceph/Vagrantfile
@@ -1,45 +1,28 @@
+cluster = {
+
+  "ceph1" => { :cpus => 4, :mem => 4096 },
+  "ceph2" => { :cpus => 4, :mem => 4096 },
+}
+
 Vagrant.configure("2") do |config|
-  ## deploy node
-  config.vm.define "ceph-deploy" do |node|
-    # base box
-    node.vm.box = "centos/7"
-
-    # hostname
-    node.vm.hostname = "ceph-deploy"
-
-    # provider
-    node.vm.provider "libvirt" do |p|
-      p.cpus = 4
-      p.memory = 4096
-      p.storage :file, :size => '30G', :type => 'qcow2'
-    end
-
-    # networks
-    node.vm.network :private_network,
-      :ip => "192.168.13.#{10+i}"
-  end
-
-  ## ceph nodes
-  (1..3).each do |i|
-    config.vm.define "ceph#{i}" do |node|
+  cluster.each_with_index do |(hostname, info), i|
+    config.vm.box_check_update = false
+    config.vm.define hostname do |node|
       # base box
       node.vm.box = "centos/7"
 
       # hostname
-      node.vm.hostname = "ceph#{i}"
+      node.vm.hostname = hostname
 
       # provider
       node.vm.provider "libvirt" do |p|
-        p.cpus = 2
-        p.memory = 2048
+        p.cpus = info[:cpus]
+        p.memory = info[:mem]
         p.storage :file, :size => '30G', :type => 'qcow2'
-        p.storage :file, :size => '40G', :type => 'qcow2'
       end
-
-      # networks
-      node.vm.network :private_network,
-        :ip => "192.168.13.#{10+i}"
+      # provision
+      node.vm.provision "shell",
+        :inline => "sudo /bin/bash /vagrant/bootstrap.sh"
     end
   end
-
 end
