--- a/pxeboot/Vagrantfile
+++ b/pxeboot/Vagrantfile
@@ -1,7 +1,8 @@
 Vagrant.configure("2") do |config|
-  ## pxe
-  config.vm.define "pxeboot" do |node|
+    ## pxe
+    config.vm.define "pxeboot" do |node|
     # base box
+    node.vm.box_check_update = false
     node.vm.box = "centos/7"
     node.vm.box_version = "1804.02"
 
